--- a/etc/tunnelkeeper.conf
+++ b/etc/tunnelkeeper.conf
@@ -1,22 +1,17 @@
-[settings]
-debug 0
-timeout 60
-
-[ssh]
-# Everything in this section obeys the same rules as ~/.ssh/config
-
+# Everything in this file obeys the same rules as ~/.ssh/config, except for the Password, Watch and Debug directives
+  
 # Examples
+#
 # Host server1
 #   Hostname 123.45.67.89
 #   User ubuntu
-#   LocalForward 10001 127.0.0.1:22
+#   LocalForward 12345 127.0.0.1:22
+#   Watch 30
+#   Password p@$$w0rd
 #
 # Host server2
 #   Hostname 123.45.67.90
 #   User ubuntu
-#   LocalForward 10002 127.0.0.1:22
-
-[passwords]
-# Use this section at your own risk, because the passwords are stored in plaintext.
-
-# server1 p@$$w0rd
+#   Port 2222
+#   RemoteForward 54321 127.0.0.1:22
+#   Debug 2
